--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 #gifDiv{
-    display:grid; 
-    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+    display:inline-block; 
+    grid-template-columns:1fr 1fr;
     grid-gap:30px;
     margin: 0px 30px 0px 30px;
 }
 img{
-    width:100%;
+    width:50%;
     display:flex;
     align-items:center;
 }
